--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,10 @@ jobs:
       - run: pip install -r requirements.txt
       - run: pelican -vD --fatal warnings
       - run: scripts/minify.sh output
+      - run: |
+          sudo apt-get -y install --no-install-recommends exiv2 exiftool
+          shopt -s globstar
+          scripts/metadata-images.sh output/**/*.png output/**/*.webp
       - run: cd output && find -name index.html | sed -e 's/index.html//' -e 's,^\.,https://efck-chat-keyboard.github.io,' | sort > sitemap.txt
 
       - name: Checkout gh-pages
